--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,7 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-content: center;
-  margin-top: 40px;
+  height: 100vh;
 }
 
 #app > div {
@@ -61,37 +61,7 @@ body {
     }
   }
 }
-/* 
-#app > div:before {
-  border: 1px solid black;
-  border-radius: 5px;
-  position: fixed;
-  content: '';
-  z-index: -1;
-  color: whitesmoke;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  font-size: 24px;
-  background: #192022;
-  height: 85vh;
-  width: 30vw;
-  letter-spacing: 1px;
-  left: 0;
-}
-#app > div:after {
-  border: 1px solid black;
-  border-radius: 5px;
-  position: fixed;
-  content: '';
-  z-index: -1;
-  color: whitesmoke;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  font-size: 24px;
-  background: #192022;
-  height: 85vh;
-  width: 30vw;
-  letter-spacing: 1px;
-  right: 0;
-} */
+
 
 #app > div > a {
   color: #333;
@@ -119,4 +89,14 @@ body {
   display: inline-block;
   position: relative;
   margin-top: 25px;
+}
+
+@media (max-width: 760px) {
+ #app > div { 
+    width: 100vw;
+    height: calc(100vh - 20px);
+    margin-top: 20px;
+    padding: 0 20px;
+    border: none;
+  }
 }
